# OCR-Subtitle-Reader

./: CMakeLists.txt  README.md
src/: Constants.h  FileType.h  GroundTruthCreator.h  IOCR.h  OCRSpaceReader.h  Properties.cpp  Properties.h  Selection.cpp  Selection.h  SelectionCanvas.cpp  SelectionCanvas.h  Subtitle.h  SubtitleCreator.h  SubtitleExtractor.h  TesseractReader.h  Text.h  TextExtractor.h  TimeUnits.h  a.out  main.cpp  subsa.srt
